--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "type": "module",
     "license": "MIT",
     "scripts": {
+        "dev:tsc": "tsc -w",
+        "dev:nodemon": "nodemon ./dist/backend/index.js",
+        "build": "yarn run build",
+        "build:tsc": "tsc",
         "check": "yarn lint && yarn prettier -c",
         "lint": "eslint .",
         "prettier": "prettier . '!**/*.{m,c,}{js,ts}{,x}'"
