--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev:tsc": "tsc -w",
         "dev:nodemon": "nodemon ./dist/backend/index.js",
+        "dev:webpack": "webpack-dev-server",
         "build": "yarn run build",
         "build:tsc": "tsc",
         "check": "yarn lint && yarn prettier -c",
